--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-You can find the full tutorial here: http://www.roberthuberdeau.com/articles/12-Blog-tutorial-part-5-adding-authors-and-displaying-tags
+You can find the full tutorial here: https://github.com/rhuberdeau/Blog-Tutorial-Part-6
